feat: make ACO concurrent